# Agentic_AI_Pipeline_to_Automate_EDA

./: main.py  pyproject.toml
agent/: graph.py  llm.py  state.py
data/: sample_dataset.csv
tools/: correlation_analysis.py  data_profiling.py  outlier_detection.py  report_generator.py  statistical_summary.py  visualization.py
utils/: file_loader.py
