[project]
name = "agentic-ai-pipeline-to-automate-eda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "boto3>=1.43.36",
    "langchain>=1.3.11",
    "langchain-aws>=1.6.1",
    "langgraph>=1.2.6",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "pandas>=3.0.4",
    "python-dotenv>=1.2.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "streamlit>=1.58.0",
]
